[package]
name = "elastimqtt5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt5-client-rs = { path = "../mqtt5-client-rs" }
tokio = { version = "1", features = ["full"] }
simplelog = { version = "0.12.1" }