[package]
name = "mqtt5-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lru = { version = "0.11" }
log = { version = "0.4.20" }
rand = { version = "0.8.5" }